Make the search box better. Real generics instead of escaped chars. Search for box wrap correctly.
Fixes #119

--- a/styles/hack-hhvm.css
+++ b/styles/hack-hhvm.css
@@ -74,7 +74,6 @@ a {
 
 .navbar .navbar-inner {
   padding: 10px 0;
-  line-height: 0px;
 }
 
 .navbar-search .search-query {
@@ -139,5 +138,4 @@ footer {
   .navbar a h1 {
     margin: 0 auto;
   }
-
 }
